# naim-node

./: .dockerignore  .gitignore  AGENTS.md  CMakeLists.txt  README.md  vcpkg.json
.github/actions/setup-naim-ssh/: action.yml
.github/workflows/: naim-production-release.yml
cmake/: CometCEF.cmake  NaimCEF.cmake
common/include/comet/: crypto_utils.h  models.h  platform_compat.h  runtime_status.h  scheduling_policy.h  sqlite_store.h  state_json.h
common/src/: compose_renderer.cpp  crypto_utils.cpp  demo_state.cpp  execution_plan.cpp  import_bundle.cpp  infer_runtime_config.cpp  planner.cpp  reconcile.cpp  runtime_status.cpp  scheduling_policy.cpp  sqlite_store.cpp  state_json.cpp
common/src/importing/: import_bundle.cpp
common/src/knowledge/: knowledge_contract_tests.cpp  knowledge_interfaces.cpp  knowledge_types.cpp
common/src/planning/: compose_renderer.cpp  compose_renderer_tests.cpp  execution_plan.cpp  (+3 more)
config/: comet-node-config.json  naim-node-config.json  v2-examples.README.md
config/demo-plane/: infer.json  plane.json
config/lt-cypher-ai/: desired-state.json
config/qwen25-0.5b-vllm-smoke/: desired-state.json
config/qwen25-0.5b-vllm-split/: desired-state.json
config/qwen35-122b-a10b/: desired-state.json
config/qwen35-27b/: desired-state.json
config/qwen35-35b-a3b/: desired-state.json
config/qwen35-397b-a17b/: desired-state.json
config/qwen35-9b-min/: desired-state.json
config/simple-data-parallel-plane/: infer.json  plane.json
config/simple-hybrid-plane/: infer.json  plane.json
config/simple-test-plane/: infer.json  plane.json
config/v2-gpu-worker/: desired-state.v2.json
config/v2-llama-rpc-backend/: desired-state.v2.json
config/v2-llama-rpc-replicas/: desired-state.v2.json
config/v2-llm-backend-only/: desired-state.v2.json
config/v2-llm-with-app/: desired-state.v2.json
config/v2-maglev-35b-2gpu/: desired-state.v2.json
controller/include/: auth_http_service.h  auth_support_service.h  bundle_http_service.h  controller_action.h  controller_cli.h  controller_command_line.h  controller_http_router.h  controller_http_server.h  controller_http_server_support.h  controller_http_transport.h  controller_http_types.h  controller_main_includes.h  controller_network_manager.h  controller_remote_client.h  host_registry_service.h  hostd_http_service.h  interaction_http_service.h  interaction_service.h  model_library_http_service.h  plane_http_service.h  plane_service.h  read_model_http_service.h  scheduler_http_service.h  scheduler_service.h
controller/src/: auth_http_service.cpp  auth_support_service.cpp  bundle_http_service.cpp  controller_action.cpp  controller_cli.cpp  controller_command_line.cpp  controller_http_router.cpp  controller_http_server.cpp  controller_http_server_support.cpp  controller_http_transport.cpp  controller_network_manager.cpp  controller_remote_client.cpp  host_registry_service.cpp  hostd_http_service.cpp  interaction_http_service.cpp  interaction_service.cpp  main.cpp  model_library_http_service.cpp  plane_http_service.cpp  plane_service.cpp  read_model_http_service.cpp  scheduler_http_service.cpp  scheduler_service.cpp  web_ui_service.cpp  web_ui_service.h
docs/: architecture.md  audit-2026-04-04.md  external-inference-contract.md  live-phase-f-validation-report-2026-03-21.md  live-single-gpu-scheduler-report-2026-03-21.md  phase-d-status-report-2026-03-21.md  phase-e-status-report-2026-03-21.md  phase-f-status-report-2026-03-21.md  phase-g-status-report-2026-03-21.md  refactored-architecture-2026-03-28.md  refactoring-audit-2026-03-28.md  refactoring-report-2026-03-28.md  refactoring-rules.md  skills-factory.md
hostd/src/: main.cpp
launcher/src/: main.cpp
migrations/: 0001_initial.sql
runtime/base/: Dockerfile
runtime/browsing/: Dockerfile  entrypoint.sh
runtime/controller/: Dockerfile
runtime/hostd/: Dockerfile
runtime/infer/: Dockerfile  entrypoint.sh  inferctl.sh  runtime-profiles.json
runtime/interaction/: Dockerfile
runtime/knowledge/: Dockerfile
runtime/skills/: Dockerfile  entrypoint.sh  skillsd.py
runtime/web-ui/: Caddyfile  Dockerfile  nginx.conf.template
runtime/worker/: Dockerfile  entrypoint.sh  vllm_launcher.py
scripts/: benchmark-data-parallel-diagnostic.sh  benchmark-data-parallel-throughput.py  benchmark-data-parallel-throughput.sh  benchmark-openai-multi-base.py  benchmark-openai-multi-base.sh  build-context.sh  build-host.sh  build-runtime-images.sh  build-target.sh  build-turboquant-runtime.sh  build-webgateway-runtime.sh  check-external-inference-contract.py  check-external-inference-contract.sh  check-live-isolated-browsing.sh  check-live-maglev-web-interaction.sh  check-live-phase-f.sh  check-live-phase-g.sh  check-live-phase-h.sh  check-live-phase-k.sh  check-live-phase-l.sh  check-live-scheduler-single-gpu.sh  check-live-scheduler.sh  check-live-storage.sh  check-live-vllm-single-node.sh  check-live-vllm-split-host.sh  check-macos.sh  check.sh  comet-diskctl.sh  configure-build.sh  configure-host-build.sh  detect-host-target.sh  ensure-vcpkg-deps.sh  find-cmake.sh  find-ninja.sh  find-vcpkg.sh  hpc1-dev-sandbox.sh  install-single-node.sh  live-smoke-plane-ux.sh  llama-rpc-replica-benchmark.sh  llama-rpc-smoke.sh  (+11 more)
scripts/ci/: controller-release-rollout.sh  detect-release-scope.sh  fetch-main-release-report.sh  hpc1-build-common.sh  hpc1-build-push-harbor.sh  hpc1-build-turboquant.sh  hpc1-build.sh  hpc1-pull-main.sh  knowledge-vault-release-gate.py  knowledge-vault-release-gate.sh  main-bootstrap-controller-update.sh  production-release-report.sh  redeploy-migrate-production.sh  register-release-on-main.sh
scripts/deploy/: deploy-control-plane.sh  deploy-hpc1-hostd.sh  deploy-main-control-plane.sh  deploy-worker-hostd.sh  naim-deploy.sh  naim-doctor.sh  naim-inventory.py  naim-preflight.sh  naim-production-env.sh  render-nginx-config.sh
scripts/release/: build-and-push-images.sh
scripts/windows/: build-target.ps1  package-target.ps1
ui/operator/: index.html
ui/operator-react/: index.html  package-lock.json  package.json  playwright.config.js
(+659 files in other folders)
